fix(pills): Increase font size and tap target size of pills for touch (#3857)
* chore(docs): add Storybook stories for pills

* fix(pills): increase type size and tap target size of pills

* chore(docs): fix import for pills kitchen sink

* fix(pills): update pills to latest touch specs

* fix(pills): make padding of slds-pill__action more decipherable

* fix(pill): fix syntax error

* chore(docs): add Storybook stories for pills

* fix(pills): increase type size and tap target size of pills

* chore(docs): fix import for pills kitchen sink

* fix(pills): update pills to latest touch specs

* fix(pills): make padding of slds-pill__action more decipherable

* fix(pill): fix syntax error

* fix(pills): tweak icon spacing

* fix(pills): udpate padding between horizontal listbox items

* fix(pills): Modified spacing between pills when inside a selection group

--- a/packages/design-system/ui/components/pills/base/_index.scss
+++ b/packages/design-system/ui/components/pills/base/_index.scss
@@ -23,8 +23,17 @@
   position: relative;
   min-height: $height-pill;
 
+  @include touch-device {
+    @include border-box-line-height($height-tappable-small);
+    padding: 0 $spacing-small;
+  }
+
   + .slds-pill {
     margin-left: $spacing-xxx-small;
+
+    @include touch-device {
+      margin-left: $spacing-xx-small;
+    }
   }
 
   &:hover {
@@ -76,6 +85,10 @@
     border-radius: $border-radius-medium;
     background-color: $color-background-input;
 
+    @include touch-device {
+      padding: $spacing-xx-small;
+    }
+
     .slds-listbox_inline {
       margin-left: 0;
       margin-right: 0;
@@ -113,6 +126,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
+    @include touch-device {
+      font-size: $font-size-4;
+    }
+
     &:focus {
       outline: 0;
       border-radius: $border-radius-medium;
@@ -140,6 +157,10 @@
 
     ~ .slds-pill__action {
       padding-left: calc(#{$square-icon-x-small-boundary} + #{$spacing-xx-small} + 2px);
+
+      @include touch-device {
+        padding-left: calc(#{$square-icon-x-small-boundary} + #{$spacing-small} + #{$spacing-xx-small});
+      }
     }
   }
 
@@ -180,6 +201,10 @@
     top: 50%;
     left: $spacing-xxx-small;
     transform: translateY(-50%);
+
+    @include touch-device {
+      left: $spacing-small;
+    }
   }
 
   .slds-pill__remove {
@@ -187,6 +212,10 @@
     top: 50%;
     right: $spacing-xxx-small;
     transform: translateY(-50%);
+
+    @include touch-device {
+      right: $spacing-small;
+    }
   }
 }
 
@@ -205,6 +234,12 @@
   overflow: hidden;
   text-overflow: ellipsis;
   flex-grow: 1;
+
+  @include touch-device {
+    padding: 0;
+    padding-left: $spacing-small;
+    padding-right: calc(#{$square-icon-xx-small-boundary} + #{$spacing-small} + 2px);
+  }
 
   &:focus {
     outline: 0;
