--- a/packages/design-system/ui/components/combobox/base/_index.scss
+++ b/packages/design-system/ui/components/combobox/base/_index.scss
@@ -155,6 +155,10 @@
 
   li + li {
     padding-left: $spacing-xxx-small;
+
+    @include touch-device {
+      padding-left: $spacing-xx-small;
+    }
   }
 }
 
@@ -501,6 +505,7 @@
     ~ .slds-listbox_selection-group {
       display: flex;
       position: relative;
+      background: $color-background-alt;
       border: 1px solid $color-border;
       border-top: 0;
       border-bottom-left-radius: $border-radius-medium;
@@ -523,7 +528,7 @@
   position: relative;
   padding: 0;
   padding-right: 3.75rem;
-  height: calc(#{$height-input} + #{$border-width-thin});
+  height: $height-input;
   overflow: hidden;
 
   @include touch-device {
@@ -540,9 +545,20 @@
     padding: 0;
   }
 
+  .slds-listbox {
+    padding: 0 0 $spacing-xxx-small; // Matches horizontal spacing of each listbox item (2px)
+
+    @include touch-device {
+      padding: 0 $spacing-xx-small ($spacing-xx-small + $spacing-xxx-small);
+    }
+  }
+
   .slds-listbox-item {
-    padding: $spacing-xxx-small;
-    line-height: 1;
+    padding: $spacing-xxx-small $spacing-xxx-small 0;
+
+    @include touch-device {
+      padding: ($spacing-xx-small + $spacing-xxx-small) $spacing-xxx-small 0;
+    }
   }
 
   /**
@@ -658,7 +674,11 @@
 
   [role="listbox"] {
     display: inline-flex;
-    padding: 0;
+    padding: 0 $spacing-xxx-small; // Matches the vertical spacing (4px)
+
+    @include touch-device {
+      padding: 0 ($spacing-xx-small + $spacing-xxx-small); // Matches the vertical spacing (6px)
+    }
   }
 
   .slds-combobox__input-value {
