feat(checkbox): adjustments for touch context (#3870)
* feat(checkbox): Increase tap target size for touch devices

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(checkbox): update touch implementation

* fix(checkbox-button-group): refactor touch height

* feat(checkbox-button): increase tap target size for touch devices
New -tappable-small token

* fix(checkbox-button-group): fix linting error

* fix(checkbox): remove deprecated margin

* fix(checkbox-toggle): increase container top/bottom padding
update label text to inherit font-size
increase status text to -size-2

* fix(checkbox): add new -tappable x-small token
Refactor context of .slds-form-element__label

* fix(checkbox): new flex vertical align mixin
Rework how checkboxes align their label's children

* fix(checkbox): move stacked variant down the cascade for specificity

* New -tappable-small design token for touch

* fix(checkbox): Move Stacked variant down the cascade for specificity
fix(checkbox): In slds-checkbox__label context, let slds-form-element__label use flex centering in touch mode
fix(checkbox): In Stacked variant, remove deprecated margin-bottom from slds-form-element__label
fix(form-element): In touch context, give slds-form-element__label a tap target area and center with flex
fix(form-element): In touch context, when info button icon is inline with form label, resize to -tappable-small
fix(form-element): In touch context, padding-top on slds-form-element__icon becomes deprecated

* fix(checkbox): linting error

# Conflicts:
#	ui/components/checkbox/base/_index.scss

* fix(checkbox): increase tap target size of standalone checkbox

* chore(checkbox): move opacity change to base context

* fix(checkbox): align checkbox toggle text to top

* fix(form-elements): increase label text size for touch

* fix(checkbox): add release notes

* fix(checkbox): update font-size values to tokens instead of inherit
Update release notes

--- a/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
@@ -31,7 +31,7 @@
   background-clip: padding-box;
 
   @include touch-device {
-    line-height: $checkbox-button-group-line-height-touch;
+    @include border-box-line-height($height-tappable);
   }
 
   /**
