--- a/packages/design-system/ui/components/form-element/stacked/_index.scss
+++ b/packages/design-system/ui/components/form-element/stacked/_index.scss
@@ -56,5 +56,9 @@
   .slds-form-element__icon {
     float: none;
     padding-top: $spacing-xx-small;
+
+    @include touch-device {
+      padding-top: 0;
+    }
   }
 }
