--- a/packages/design-system/ui/components/checkbox-button/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-button/base/_index.scss
@@ -12,6 +12,13 @@
  */
 .slds-checkbox_add-button,
 .slds-checkbox--add-button {
+  @include touch-device {
+    @include square($square-tappable);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   /**
    * @summary Creates a custom styled checkbox
    * @selector .slds-checkbox_faux
@@ -26,6 +33,10 @@
     border-radius: $border-radius-medium;
     background-color: $color-background-input;
     cursor: pointer;
+
+    @include touch-device {
+      @include square($square-tappable-small);
+    }
 
     &:before,
     &:after {
