fix(radio-group): Update radio-group for touch context (#3889)
* chore(radio-group): add Storybook stories for radio groups

* fix(radio-group): increase label text size
Increase faux radio element size
Increase label tap target size

* fix(radio-group): add annotations for radio-group

* fix(radio-group): release notes

--- a/packages/design-system/ui/components/radio-group/base/_index.scss
+++ b/packages/design-system/ui/components/radio-group/base/_index.scss
@@ -14,6 +14,18 @@
   display: inline-block;
 
   /**
+   * @summary Label container of the text and faux radio
+   * @selector .slds-radio__label
+   * @restrict .slds-radio label
+   */
+  .slds-radio__label {
+    @include touch-device {
+      @include flex-vertical-center;
+      min-height: $height-tappable;
+    }
+  }
+
+  /**
    * Creates a custom styled radio button
    *
    * @selector .slds-radio_faux
@@ -29,12 +41,20 @@
     border-radius: $border-radius-circle;
     background: $color-background-input;
     transition: border $duration-quickly linear, background-color $duration-quickly linear;
+
+    @include touch-device {
+      @include square($square-tappable-x-small);
+    }
   }
 
   .slds-form-element__label {
     display: inline;
     vertical-align: middle;
     font-size: $font-size-3;
+
+    @include touch-device {
+      font-size: inherit;
+    }
   }
 
   [type="radio"] {
