Feat/mobile modals (#3891)
* feat(mobile-modals): Load Modals into Storybook
* feat(mobile-modals): Update tap target size for Modal close button, center svg in the tap zone
* feat(mobile-modals): Deprecate utility class use for modal title, declare and style explicit class, make bold for mobile
* feat(mobile-modals): Update release notes

--- a/packages/design-system/ui/components/modals/base/_index.scss
+++ b/packages/design-system/ui/components/modals/base/_index.scss
@@ -112,6 +112,22 @@
   }
 
   /**
+    * Modal title (optional)
+    *
+    * @selector .slds-modal__title
+    * @restrict .slds-modal__header h2
+    */
+  .slds-modal__title {
+    font-weight: $font-weight-light;
+    font-size: $font-size-7;
+    line-height: $line-height-heading;
+
+    @include touch-device {
+      font-weight: $font-weight-bold;
+    }
+  }
+
+  /**
    * Creates the scrollable content area for the modal.
    *
    * @selector .slds-modal__content
@@ -208,6 +224,12 @@
     position: absolute;
     top: ($square-icon-medium-boundary * -1.25);
     right: ((($square-icon-medium-boundary - $square-icon-medium-content) / 2) * -1);
+
+    @include touch-device {
+      @include square($height-tappable);
+      top: -$height-tappable;
+      right: 0;
+    }
   }
 }
 
