fix(radio-group): allow form-element__label to vert center with flex in touch context (#3892)

--- a/packages/design-system/ui/components/radio-group/base/_index.scss
+++ b/packages/design-system/ui/components/radio-group/base/_index.scss
@@ -53,7 +53,8 @@
     font-size: $font-size-3;
 
     @include touch-device {
-      font-size: inherit;
+      display: inline-flex; // In touch, .slds-form-element__label uses flex for vert centering
+      font-size: $font-size-5;
     }
   }
 
