fix(menu): Correct RTL flipping (#3881)
* fix(menu): Correct RTL flipping

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(nubbins): Add @noflip annotation to avoid misplaced nubbin

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(tree): Correct shadow/bar highlight of tree-item in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(vertical-nav): Correct shadow/bar highlight in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(accordion): Correct direction of action icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(vertical-nav): Correct direction of overflow icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(tree): Correct direction of tree-item expand/collapse icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* chore(infra): Add Storybook RTL addon

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(rtl): Update release notes

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* Update package-lock.json

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

--- a/packages/design-system/ui/components/accordion/base/_index.scss
+++ b/packages/design-system/ui/components/accordion/base/_index.scss
@@ -73,6 +73,10 @@
 .slds-accordion__summary-action-icon {
   flex-shrink: 0;
   transform: rotate(-90deg);
+
+  @include rtl() {
+    transform: rotate(90deg);
+  }
 }
 
 /**
