--- a/packages/design-system/ui/components/vertical-navigation/expandable-section/_index.scss
+++ b/packages/design-system/ui/components/vertical-navigation/expandable-section/_index.scss
@@ -13,6 +13,10 @@
 
   &[aria-expanded="true"] .slds-button__icon {
     transform: rotate(90deg);
+
+    @include rtl() {
+      transform: rotate(-90deg);
+    }
   }
 }
 
