--- a/packages/design-system/ui/components/popovers/nubbins/_index.scss
+++ b/packages/design-system/ui/components/popovers/nubbins/_index.scss
@@ -37,6 +37,7 @@
 
   &:before,
   &:after {
+    /*! @noflip */
     left: $spacing-large;
     top: (($nubbin-size-default / 2) * -1);
   }
@@ -61,9 +62,14 @@
 
   &:before,
   &:after {
+    /*! @noflip */
     left: auto;
+
+    /*! @noflip */
     right: $spacing-large;
     top: (($nubbin-size-default / 2) * -1);
+
+    /*! @noflip */
     margin-right: (($nubbin-size-default / 2) * -1);
   }
 }
@@ -104,6 +110,7 @@
 
   &:before,
   &:after {
+    /*! @noflip */
     left: $spacing-large;
     top: 100%;
     margin-top: (($nubbin-size-default / 2) * -1);
@@ -129,10 +136,15 @@
 
   &:before,
   &:after {
+    /*! @noflip */
     left: auto;
+
+    /*! @noflip */
     right: $spacing-large;
     top: 100%;
     margin-top: (($nubbin-size-default / 2) * -1);
+
+    /*! @noflip */
     margin-right: (($nubbin-size-default / 2) * -1);
   }
 }
