feat(rich-text-editor): Touch updates for Rich Text Editor selects (#3894)
* add Stories for Rich Text Editor examples
* Remove utility classes on combobox/selects in RTE Toolbar for component-specific classes to better handle sizing

--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -90,6 +90,28 @@
   margin-bottom: $spacing-xx-small;
 }
 
+/**
+ * Container X-Small Size for Rich Text Editor Combobox
+ *
+ * @selector .slds-rich-text-editor__select_x-small
+ * @restrict .slds-rich-text-editor__select .slds-combobox
+ */
+.slds-rich-text-editor__select_x-small {
+  max-width: $size-x-small;
+  width: auto;
+}
+
+/**
+ * Container XX-Small Size for Rich Text Editor Combobox
+ *
+ * @selector .slds-rich-text-editor__select_xx-small
+ * @restrict .slds-rich-text-editor__select .slds-combobox
+ */
+.slds-rich-text-editor__select_xx-small {
+  max-width: $size-xx-small;
+  width: auto;
+}
+
 // This class should be placed on a containing div when RTE toolbar is in a small space
 .slds-region_narrow {
 
