fix(combobox): Migrate docs to use example exports, move deprecated into new folder (#3897)
* fix(combobox): Migrate docs to use example exports, move deprecated into new folder

* Update release notes

* Fix a11y test failure

* Change ComboboxContainer to DeprecateCombobox

--- a/packages/design-system/ui/components/combobox/autocomplete/_index.scss
+++ b/packages/design-system/ui/components/combobox/autocomplete/_index.scss
@@ -2,9 +2,9 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @name dialog
- * @selector  .slds-combobox[aria-haspopup=“dialog”]
- * @restrict .slds-combobox_container .slds-combobox
+ * @name autocomplete
+ * @selector [aria-autocomplete="list"]
+ * @restrict .slds-combobox__input
  * @support dev-ready
  * @variant
  */
