--- a/packages/design-system/ui/components/combobox/deprecated-multi-entity/_index.scss
+++ b/packages/design-system/ui/components/combobox/deprecated-multi-entity/_index.scss
@@ -2,12 +2,10 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @summary Container that manages layout when a listbox of pill options sit next to a combobox search input
- *
- * @name multi-entity
+ * @name deprecated-multi-entity
  * @selector .slds-has-object-switcher
  * @restrict .slds-combobox_container
  * @variant
- * @deprecated
  * @support dev-ready
+ * @deprecated
  */
