--- a/packages/design-system/ui/components/combobox/deprecated-inline-listbox/_index.scss
+++ b/packages/design-system/ui/components/combobox/deprecated-inline-listbox/_index.scss
@@ -2,11 +2,10 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @summary Container that manages layout when a listbox of pill options sit next to a combobox search input
- *
- * @name inline-listbox
+ * @name deprecated-inline-listbox
  * @selector .slds-has-inline-listbox
  * @restrict .slds-combobox_container
- * @support dev-ready
  * @variant
+ * @support dev-ready
+ * @deprecated
  */
