fix(form-element): increase font size for static value in touch (#3904)

--- a/packages/design-system/ui/components/form-element/base/_index.scss
+++ b/packages/design-system/ui/components/form-element/base/_index.scss
@@ -172,6 +172,10 @@
   color: $input-static-color;
   width: 100%;
 
+  @include touch-device {
+    font-size: $font-size-5;
+  }
+
   &.slds-text-longform *:last-child {
     margin-bottom: 0;
   }
