--- a/packages/design-system/ui/components/data-tables/base/_index.scss
+++ b/packages/design-system/ui/components/data-tables/base/_index.scss
@@ -218,14 +218,14 @@
   //
   // Checks if .no-row-hover is applied to parent table
   // Applies hovers to only <th> and <td> within <tbody>
-  // Also checks that the <th> and <td> do not have the class .is-selected
+  // Also checks that the <th> and <td> do not have the class .slds-has-focus
   // This retains the selected state when a row is hovered
   //
   // Box shadow used to eliminate jumpiness on hover
-  &:not(.slds-no-row-hover) tbody tr:hover > td:not(.slds-is-selected),
-  &:not(.slds-no-row-hover) tbody tr:hover > th:not(.slds-is-selected),
-  &:not(.slds-no-row-hover) tbody tr:focus > td:not(.slds-is-selected),
-  &:not(.slds-no-row-hover) tbody tr:focus > th:not(.slds-is-selected) {
+  &:not(.slds-no-row-hover) tbody tr:hover > td:not(.slds-has-focus),
+  &:not(.slds-no-row-hover) tbody tr:hover > th:not(.slds-has-focus),
+  &:not(.slds-no-row-hover) tbody tr:focus > td:not(.slds-has-focus),
+  &:not(.slds-no-row-hover) tbody tr:focus > th:not(.slds-has-focus) {
     box-shadow:
       $color-border 0 ($border-width-thin * -1) 0 inset,
       $color-border 0 ($border-width-thin) 0 inset;
