--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -16,6 +16,7 @@
   position: relative;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   padding: 0;
   background: transparent;
   background-clip: border-box;
