fix(checkbox/form-element): Touch updates (#3905)
* fix(checkbox): increase touch size of read only icons and form controls

* fix(form-element): update layout of horizontal variant for touch

* fix(form-element): normalize top spacing of label, remove extra icon spacing

--- a/packages/design-system/ui/components/form-element/base/_index.scss
+++ b/packages/design-system/ui/components/form-element/base/_index.scss
@@ -129,11 +129,22 @@
   .slds-form-element__control {
     padding-top: $spacing-xxx-small;
     padding-bottom: $spacing-xxx-small;
+
+    @include touch-device {
+      @include flex-vertical-center;
+      min-height: $height-tappable; // Makes height consistent with other checkbox variants
+    }
   }
 
   // We want no spacing in read only and allow line-height to handle white-space
   .slds-form-element__label {
     margin-bottom: 0;
+  }
+
+  .slds-icon {
+    @include touch-device {
+      @include square($square-tappable-x-small);
+    }
   }
 }
 
