--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -20,6 +20,12 @@
   background-clip: padding-box;
   box-shadow: $card-shadow;
 
+  // mobile context tweaks
+  @include touch-device {
+    border-color: transparent;
+    border-radius: 0;
+  }
+
   // Adds spacing between cards
   + .slds-card {
     margin-top: $var-spacing-vertical-medium;
