--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -64,6 +64,7 @@
   // Forms
   'form-element/base/index',
   'input/base/index',
+  'counter/base/index',
   'textarea/base/index',
   'radio-group/base/index',
   'radio-button-group/base/index',
