fix(tree-grid): Change header action button alignment approach (#3984)
* fix tree grid header action alignment approach

* make exception for header action in tree grid specific buttons

--- a/packages/design-system/ui/components/data-tables/base/_index.scss
+++ b/packages/design-system/ui/components/data-tables/base/_index.scss
@@ -375,7 +375,7 @@
     position: absolute;
     top: 50%;
     right: $spacing-xx-small;
-    transform: translateY(-50%);
+    margin-top: ($spacing-x-small * -1);
   }
 }
 
