feat(prompt): Add non-modal variant (#3986)
* feat(prompt): Add non-modal variant

* Revert "feat(prompt): Add non-modal variant"

This reverts commit 1455016f15a17b76c083f8d96918dc697f174cac.

* feat(popover): Add prompt variant

* feat(popover): Prompt, address review feedback

* feat(popover): Prompt, add release notes & update docs

* feat(popover): Prompt, add snapshot tests

* feat(popover): Prompt, tweak docs

* feat(popover): Prompt, additional annotations

* chore(infra): Update package-lock

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -106,6 +106,7 @@
   'popovers/einstein/index',
   'popovers/error/index',
   'popovers/warning/index',
+  'popovers/prompt/index',
 
 
   // Tooltips
