fix(cards): increase size of header title for touch devices (#4006)

--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -60,6 +60,10 @@
 .slds-card__header-title {
   font-size: $var-font-size-5;
   line-height: $line-height-heading;
+
+  @include touch-device {
+    font-size: $var-font-size-6;
+  }
 }
 
 /**
